Fixed issue with pagination not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ Theme URI: http://www.jacobmartella.com/wordpress/wordpress-themes/video-place-w
 Description: YouTube is a great place to upload your videos, but a not-so-great place if you want a customizable vlog. VideoPlace provides you with just that. This theme allows you the flexibility of being able to customize the look of your vlog, while keeping the look and feel of you videos similar to that of YouTube. Happy vlogging!
 Author: Jacob Martella
 Author URI: http://www.jacobmartella.com/
-Version: 1.
+Version: 1.1
 License: GNU General Public License & MIT
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Tags: two-columns, right-sidebar, custom-background, custom-header, editor-style, featured-images, sticky-post, theme-options, translation-ready, threaded-comments
@@ -4842,7 +4842,8 @@ E. Screen Reader Text
               display: none !important;
               border-color: #6E6E6E transparent transparent !important; }
           .header .top-bar ul .menu-item ul li ul {
-            top: 1px !important; }
+            top: 1px !important;
+            border: 0; }
     .header .top-bar ul .menu-icon {
       border: 0px;
       background-color: transparent; }
@@ -5461,7 +5462,8 @@ E. Screen Reader Text
   color: #FFFFFF;
   text-transform: uppercase;
   margin-left: 0;
-  margin-right: 10px; }
+  margin-right: 10px;
+  display: inline-block; }
   .page-navigation li a {
     color: #FFFFFF; }
   .page-navigation li:hover {
