--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -76,6 +76,7 @@
 						}
 						ul {
 							top: 1px !important;
+							border: 0;
 						}
 					}
 				}
